--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-signalr": "^0.0.6",
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^5.1.0"
   },
